--- a/src/components/Users/Users.module.scss
+++ b/src/components/Users/Users.module.scss
@@ -14,13 +14,23 @@
             justify-content: space-around;
             align-items: center;
             .month{
-                width: 100%;
+                min-width: 150px;
                 height: 100%;
+                padding: 10px 20px;
+                border-radius: 15px;
                 display: flex;
                 justify-content: center;
                 align-items: center;
                 border-bottom: 1px solid #141414;
                 font-size: 24px;
+                opacity: 0.7;
+                &:hover{
+                    opacity: 0.9;
+                    box-shadow: 4px 4px 2px grey;
+                }
+                &_name{
+                    color: #ffffff;
+                }
             }
         }
     }
@@ -58,6 +68,7 @@
                 &_element{
                     padding: 20px;
                     text-align: center;
+                    font-size: 16px;
                 }
 
             }
